Bug 250060 - crash when timezone is empty
Summary: crash when timezone is empty
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kabc (other bugs)
Version First Reported In: SVN trunk
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 18:51 UTC by simon
Modified: 2010-09-07 10:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2010-09-03 18:51:44 UTC
Version:           SVN trunk (using Devel) 
OS:                Linux

hi,

i get crashes in kdepimlibs/kabc/vcardtool.cpp line 612 when a empty timezone (e.g. for a contact ) is getting parsed a null exception is triggererd:

#5  0x00007ffff41da193 in qt_assert (assertion=0x7ffff6d7c79a "i >= 0 && i < size()", file=0x7ffff6d7c9f8 "/usr/include/qt4/QtCore/qstring.h", line=690) at global/qglobal.cpp:2013
#6  0x00007ffff6d35d90 in QString::operator[] (this=0x7fffe5e6ea00, i=0) at /usr/include/qt4/QtCore/qstring.h:690
#7  0x00007ffff6d6af96 in KABC::VCardTool::parseVCards (this=0x7fffe5e6f1e0, vcard=<value optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-4.4.9999/work/kdepimlibs-4.4.9999/kabc/vcardtool.cpp:612
#8  0x00007ffff6d5e5bf in KABC::VCardConverter::parseVCards (this=<value optimized out>, vcard=...) at /var/tmp/portage/kde-base/kdepimlibs-4.4.9999/work/kdepimlibs-4.4.9999/kabc/vcardconverter.cpp:61
#9  0x00007ffff6d5e5f1 in KABC::VCardConverter::parseVCard (this=0x429f, vcard=...) at /var/tmp/portage/kde-base/kdepimlibs-4.4.9999/work/kdepimlibs-4.4.9999/kabc/vcardconverter.cpp:52
#10 0x000000000041e71e in ContactsSource::insertItem (this=0x6c6400, item=...) at /home/user/akunambol-0.2/syncsource/contactssource.cpp:119


akunambol(17051) KDELog::printLine: 18:36:54 DEBUG TZ;VALUE=text:



Reproducible: Always
Comment 1 Riccardo Iaconelli 2010-09-06 12:49:06 UTC
this is the original bug:
https://bugs.kde.org/show_bug.cgi?id=250005

Marco Garatti should already have a patch.
Comment 2 Riccardo Iaconelli 2010-09-07 10:07:37 UTC
Fixed in r1172275.