Allow empty TZ field when creating a contact.

BUG: 250060
BUG: 250005

svn path=/trunk/KDE/kdepimlibs/; revision=1172275